package code;

public enum Estado {
    DETENIDA,
    EN_DEPOSITO,
    EN_MARCHA
}
