package code;public class Formacion {
}
